tests/NormalTests/paczka1/small_fuzzy/19714087.err
Error in line 2: 8ELoCxMn6ll S961 16,6
Error in line 14: vlBWtOV A228 385,02
Error in line 5: vlBWtOV A228 89,8
